Added a friendly Title and Tagline

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Jasleen1234.GitHub.io</h1>
-      <h2 class="project-tagline">Trial Website </h2>
+      <h1 class="project-name">Welcome to Jasleen's Homepage!</h1>
+      <h2 class="project-tagline">IB HL Sciences Help </h2>
     </section>
 
     <section class="main-content">
